--- a/pom.xml
+++ b/pom.xml
@@ -55,24 +55,40 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-                <configuration>
-                    <mainClass>client.ClientUI</mainClass>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <configuration>
+                            <mainClass>server.ServerUI</mainClass>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>client</id>
+                        <configuration>
+                            <mainClass>client.ClientUI</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
-            <!-- Maven Exec Plugin for running -->
+            <!-- Maven Exec Plugin for running with proper JavaFX modules -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
-                <configuration>
-                    <mainClass>client.ClientUI</mainClass>
-                </configuration>
                 <executions>
                     <execution>
                         <id>server</id>
                         <configuration>
                             <mainClass>server.ServerUI</mainClass>
+                            <commandlineArgs>--module-path ${project.build.directory}/classes --add-modules javafx.controls,javafx.fxml</commandlineArgs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>client</id>
+                        <configuration>
+                            <mainClass>client.ClientUI</mainClass>
+                            <commandlineArgs>--module-path ${project.build.directory}/classes --add-modules javafx.controls,javafx.fxml</commandlineArgs>
                         </configuration>
                     </execution>
                 </executions>
